manifest/observability/logging/victorialogs/vlinsert/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels: 
    app.kubernetes.io/name: vlinsert
  name: vlinsert
  namespace: logging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vlinsert.kubeop.com
    secretName: kubeop.com-ssl
  rules:
    - host: vlinsert.kubeop.com
      http:
        paths:
          - path: /insert
            pathType: Prefix
            backend:
              service:
                name: vlinsert
                port: 
                  name: http
